Exception code smell fix